# api/router/user_router.go
@@ -13,14 +13,17 @@ package router
 import (
 	"errors"
 	"fmt"
-	"github.com/gofiber/fiber/v2"
-	"github.com/golang-jwt/jwt/v5"
-	"github.com/kouprlabs/voltaserve/api/config"
-	"github.com/kouprlabs/voltaserve/api/errorpkg"
-	"github.com/kouprlabs/voltaserve/api/service"
 	"net/http"
 	"net/url"
 	"strconv"
+
+	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt/v5"
+
+	"github.com/kouprlabs/voltaserve/api/config"
+	"github.com/kouprlabs/voltaserve/api/errorpkg"
+	"github.com/kouprlabs/voltaserve/api/helper"
+	"github.com/kouprlabs/voltaserve/api/service"
 )
 
 type UserRouter struct {
@@ -163,8 +166,8 @@ func (r *UserRouter) parseListQueryParams(c *fiber.Ctx) (*service.UserListOption
 //	@Param			id				path		string	true	"ID"
 //	@Param			ext				path		string	true	"Extension"
 //	@Param			access_token	query		string	true	"Access Token"
-//	@Param			organization_id			query		string	false	"Organization ID"
-//	@Param			group					query		string	false	"Group ID"
+//	@Param			organization_id	query		string	false	"Organization ID"
+//	@Param			group			query		string	false	"Group ID"
 //	@Failure		404				{object}	errorpkg.ErrorResponse
 //	@Failure		500				{object}	errorpkg.ErrorResponse
 //	@Router			/users/{id}/picture{ext} [get]
@@ -187,22 +190,28 @@ func (r *UserRouter) DownloadPicture(c *fiber.Ctx) error {
 	if c.Params("ext") == "" {
 		return errorpkg.NewMissingQueryParamError("ext")
 	}
-	var organizationID *string
+	var orgID *string
 	if c.Query("organization_id") != "" {
-		param := c.Query("organization_id")
-		organizationID = &param
+		orgID = helper.ToPtr(c.Query("organization_id"))
 	}
 	var groupID *string
 	if c.Query("group_id") != "" {
-		param := c.Query("group_id")
-		groupID = &param
+		groupID = helper.ToPtr(c.Query("group_id"))
 	}
-	b, ext, mime, err := r.userSvc.ExtractPicture(id, organizationID, groupID, userID, isAdmin)
+	var invitationID *string
+	if c.Query("invitation_id") != "" {
+		invitationID = helper.ToPtr(c.Query("invitation_id"))
+	}
+	b, ext, mime, err := r.userSvc.ExtractPicture(id, service.ExtractPictureJustification{
+		OrganizationID: orgID,
+		GroupID:        groupID,
+		InvitationID:   invitationID,
+	}, userID, isAdmin)
 	if err != nil {
 		return err
 	}
 	if *ext != c.Params("ext") {
-		return errorpkg.NewS3ObjectNotFoundError(nil)
+		return errorpkg.NewUserPictureNotFoundError(nil)
 	}
 	c.Set("Content-Type", *mime)
 	c.Set("Content-Disposition", fmt.Sprintf("filename=\"picture%s\"", ext))
